modules/EC2/security_groups/main.tf

resource "aws_security_group" "default_ec2_instance_sg" {
  name        = "default_ec2_instance_sg"
  description = "Default configuration for EC2 instances"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow ingress ssh traffic from anywhere"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow ingress http traffic from anywhere"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow egress any traffic to anywhere"
  }

}
